# Farm_Data_AI

./: .gitignore  README.md  pyproject.toml  requirement.txt  requirements.txt
src/: database.py  main.py
src/.github/workflows/: main.yml
src/handlers/: adhoc.py  ai_chat.py  collection.py  dashboard.py  history.py  onboarding.py  router.py
src/utils/: files.py  menus.py  navigation.py  scheduler.py  transcriber.py  validators.py  weather.py
src/utils/ai_agent/: ai_agent.py  ai_prompts.py
